part1/exercise1.13/manifests/project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: yumol/project:0.7
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
