part1/exercise1.13/manifests/project/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    #use "/pingpong" path whilst the ping-pong application listens on "/"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: project-svc
          servicePort: 2345
